# casino-v1

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml
.devcontainer/: devcontainer.json
restbook/: local.restbook
src/: main.rs
src/controllers/: mod.rs  transaction_controller.rs  user_controller.rs
src/db/: mongo_db.rs
src/models/: api_exception.rs  mod.rs  transaction_document.rs  transaction_request.rs  transaction_response.rs  user_document.rs  user_response.rs
src/repository/: mod.rs  transaction_repository.rs  user_repository.rs
src/routes/: init.rs
src/services/: foco_service.rs  mod.rs  transaction_service.rs
src/utils/: api_exception_enum.rs  constants.rs  custom_error.rs  mod.rs
terraform/: README.md  main.tf  output.tf  providers.tf  terraform.tfvars  variables.tf
