[package]
name = "casino-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum ={ version = "0.7.1" }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
mongodb = { version = "2.7.1"}
thiserror = "1.0.50"
tokio-stream = "0.1.14"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
